# TicTacToe_SDL

./: CMakeLists.txt  Makefile  game_model.c  game_model.h  gmon.out  gprof.out  readme.md  renderer.c  renderer.h  tictactoe.c  tictactoe.h
cmake/: FindSDL2.cmake
ress/: close_before_click.pyxel  game2.png.pyxel
